dnsmasq: Fix bad cache-size calculation when hosts-file read fails

--- a/trunk/user/dnsmasq/dnsmasq-2.7x/CHANGELOG
+++ b/trunk/user/dnsmasq/dnsmasq-2.7x/CHANGELOG
@@ -18,6 +18,10 @@ version 2.75+
 	    that the same name is empty. Thanks to Edwin Török for
 	    the patch.
 
+	    Fix failure to correctly calculate cache-size when 
+	    reading a hosts-file fails. Thanks to André Glüpker 
+	    for the patch.
+
 	
 version 2.75
             Fix reversion on 2.74 which caused 100% CPU use when a 
