--- a/trunk/user/usb-modeswitch/usb_modeswitch.1
+++ b/trunk/user/usb-modeswitch/usb_modeswitch.1
@@ -77,19 +77,14 @@ strongly advised to comply with specifications and to avoid likely errors
 After issuing all bulk messages, wait for NUM milliseconds before releasing the interface.
 Required for some modems on older systems (especially after an EJECT message)
 .IP "\fB-n\fP \fB\-\-need-response\fP         " 10
-Read the response (command status wrapper) to a mass storage command
-transfer.
-Some devices have trouble switching if the response is not read; most
-are disappearing right away. When sending multiple mass storage commands
-with \fB\-2\fR and \fB\-3\fR, this may need to be set to avoid transfer errors
+Obsolete. CSW is always attempted to being read after mass storage transfers. No downside
 .IP "\fB-r\fP \fB\-\-response-endpoint NUM\fP         " 10
-Try to read the response to a storage command from there
-if option \-n is active. Only for testing purposes; usually
-endpoints are determined from the device attributes
+Try to read the response to a storage command from there. Only for testing purposes;
+usually endpoints are determined from the device attributes
 .IP "\fB-K\fP \fB\-\-std-eject\fP         " 10
 Apply the standard SCSI sequence of "Allow Medium Removal" and
 "Eject". Implies \fB-n\fP. One 'Message' can be added with \fB-M\fP
-that will be transmitted after the eject sequence
+that will be transmitted after the eject sequence. Used by many modems
 .IP "\fB-d\fP \fB\-\-detach-only\fP         " 10
 Just detach the current driver. This is sufficient for some early
 devices to switch successfully. Otherwise this feature can
@@ -118,6 +113,8 @@ Send a special control message used by Pantech devices.
 Value NUM will be used in control message as 'wValue'
 .IP "\fB-Z\fP \fB\-\-blackberry-mode\fP         " 10
 Send a special control message used by some newer Blackberry devices
+.IP "\fB-S\fP \fB\-\-option-mode\fP         " 10
+Send a special control message used by all Option devices
 .IP "\fB-O\fP \fB\-\-sony-mode\fP         " 10
 Apply a special sequence used by Sony Ericsson devices. Implies option \--check-success
 .IP "\fB-L\fP \fB\-\-cisco-mode\fP         " 10
@@ -174,4 +171,4 @@ later version published by the Free Software Foundation.
 The complete text of the current GNU General Public
 License can be found in http://www.gnu.org/licenses/gpl.txt
 
-.\" last edited 2014-05-29 for version 2.2.0
+.\" last edited 2016-01-11 for version 2.3.0
