--- a/trunk/user/miniupnpd/miniupnpd-1.9.x/Changelog.txt
+++ b/trunk/user/miniupnpd/miniupnpd-1.9.x/Changelog.txt
@@ -1,4 +1,25 @@
-$Id: Changelog.txt,v 1.416 2016/01/19 10:03:28 nanard Exp $
+$Id: Changelog.txt,v 1.425 2016/02/20 19:11:58 nanard Exp $
+
+2016/02/19:
+  set IPv6 Hop limit to 10
+  fix HOST: header of event notifications in IPv6
+  be more compliant on 64bit machines : ui4 in [0;2^32-1]
+
+2016/02/16:
+  minor changes to follow UDA 1.1 more closely.
+  more argument checking in Soap methods.
+
+2016/02/12:
+  return error 729 - ConflictWithOtherMechanisms if IGD v2 is enabled.
+  add iptc_init() check in iptcrdr.c/init_redirect()
+  add update_portmapping() / update_portmapping_desc_timestamp() functions
+
+2016/02/11:
+  use Linux libuuid uuid_generate() / BSD uuid_create() API
+
+2016/01/28:
+  renamed iptables chain MINIUPNPD-PCP-PEER to MINIUPNPD-POSTROUTING
+  implemented "IGD2 Port Triggering" with netfilter/iptables
 
 2016/01/18:
   fix pcpserver.c CreatePCPMap_FW() : check pinhole before adding
