--- a/trunk/user/miniupnpd/miniupnpd-2.x/Changelog.txt
+++ b/trunk/user/miniupnpd/miniupnpd-2.x/Changelog.txt
@@ -1,4 +1,38 @@
-$Id: Changelog.txt,v 1.431 2017/04/21 11:30:23 nanard Exp $
+$Id: Changelog.txt,v 1.442 2018/07/06 12:05:46 nanard Exp $
+
+2018/07/06:
+  STUN support
+
+VERSION 2.1 : released on 2018/05/08
+
+2018/05/02:
+  option to store remaining time in leasefile
+
+2018/04/12:
+  pf: set dst address in rule if use_ext_ip_addr is set
+
+2018/04/06:
+  Add options for netfilter scripts
+
+2018/03/13:
+  Use monotonic clock for timeouts, etc.
+
+2018/02/22:
+  Add option force_igd_desc_v1 to force devices and services versions
+    to 1 in IGD v2 mode
+
+2017/12/12:
+  Fix a few buffer overrun in SSDP and SOAP parsing
+
+2017/11/02:
+  PCP : reset epoch after address change
+
+2017/05/26:
+  merge https://github.com/miniupnp/miniupnp/tree/randomize_url branch
+
+2017/05/24:
+  get SSDP packet receiving interface index and use it to check if the
+    packet is from a LAN
 
 2017/03/13:
   default to client address for AddPortMapping when <NewInternalClient>
@@ -80,10 +114,15 @@ VERSION 2.0 : released on 2016/04/19
 
 2015/09/22:
   cleanup UPNP_VERSION macro / add UPNP_VERSION_MAJOR, UPNP_VERSION_MINOR
-  Dont use packed structs anymore to read/write PCP messages
+  Don't use packed structs anymore to read/write PCP messages
 
 2015/09/15:
   use name server from query in SOAP responses
+
+2015/09/14:
+  Randomize URLs to avoid http://www.filet-o-firewall.com/
+    https://github.com/filetofirewall/fof
+    (specific branch, merged later, see above)
 
 2015/08/25:
   better bind socket to right interface(s),
@@ -298,7 +337,7 @@ VERSION 1.8 : released on 2013/02/06
 
 2013/02/06:
   Check source address of incomining HTTP connections and SSDP
-    packets in order to filter out WAN SSDP and HTTP trafic.
+    packets in order to filter out WAN SSDP and HTTP traffic.
   Implement get_src_for_route_to() for *BSD
   fix 2 potential memory leaks in GetListOfPortMappings()
 
@@ -583,7 +622,7 @@ VERSION 1.6 : released the 2011/07/25
   GET /DP.xml is now available. The description has to be completed.
 
 2011/05/19:
-  Add getconnstatus.c/.h. Dont always have ConnectionStatus to "Connected"
+  Add getconnstatus.c/.h. Don't always have ConnectionStatus to "Connected"
   Events for WANIPv6FirewallControll
 
 2011/05/16:
