--- a/trunk/user/miniupnpd/miniupnpd-2.x/INSTALL
+++ b/trunk/user/miniupnpd/miniupnpd-2.x/INSTALL
@@ -1,12 +1,12 @@
 MiniUPnP project.
-(c) 2006-2017 Thomas Bernard
+(c) 2006-2016 Thomas Bernard
 Homepage : http://miniupnp.free.fr/
-Mirror: https://miniupnp.tuxfamily.org/
+Mirror: http://miniupnp.tuxfamily.org/
 github: https://github.com/miniupnp/miniupnp
 
-miniupnpd is still under developpement. This documentation is
+miniupnpd is still under active developpement. This documentation is
 likely to be a little outdated when you read it. So please go on the
-web forum https://miniupnp.tuxfamily.org/ if you need more information.
+web forum http://miniupnp.tuxfamily.org/ if you need more information.
 
 ================================ *BSD/pf =================================
 To Build and Install :
@@ -25,7 +25,7 @@ To Build and Install :
   lines to /etc/pf.conf :
    pass out on $int_if from any to 239.0.0.0/8 keep state
    pass in on $int_if from any to 239.0.0.0/8 keep state
-- don't forget to " pfctl -f /etc/pf.conf "
+- dont forget to " pfctl -f /etc/pf.conf "
 - you can check your modifications are taken into account with
   "pfctl -s nat" and "pfctl -s rule". Look for the "rdr-anchor miniupnpd"
   (if applicable) and/or "anchor miniupnpd" lines.
@@ -75,7 +75,7 @@ To Build and install :
   from http://netfilter.org
 - edit and run netfilter/iptables_init.sh shell script.
   This script must allways be run before the daemon
-  to set up initial rules and chains.
+  to set up intial rules and chains.
 - Build and edit the config.h file
   > make -f Makefile.linux config.h
   > vi config.h
@@ -90,8 +90,8 @@ To Build and install :
 - anytime, you can use the netfilter/iptables_flush.sh
   script to flush all rules added by the daemon.
 - after killing the daemon, you can get back to
-  iptables initial state by running the netfilter/iptables_removeall.sh
-  script. Don't forget to edit the script to your convenience.
+  iptables initial state by runing the netfilter/iptables_removeall.sh
+  script. Don't forget to edit the script to your convinience.
 
 NOTE: a /etc/init.d/miniupnpd script will be installed.
   If it suits you, you can use is with start, stop or restart argument.
@@ -116,7 +116,7 @@ work is in progress. To build :
  > make -f Makefile.linux_nft
 
 see :
-https://miniupnp.tuxfamily.org/forum/viewtopic.php?p=4370
+http://miniupnp.tuxfamily.org/forum/viewtopic.php?p=4370
 https://github.com/miniupnp/miniupnp/pull/114
 
 =========================== Configuration =============================
@@ -138,7 +138,7 @@ The current code assumes there is only one IPv4 address assigned to LAN
 interfaces. That is not the case with some CARP setup, there is then a risk
 the wrong mask would be picked. You can force the mask when using interface
 names :
-listening_ip=eth0/24
+listtening_ip=eth0/24
 
 Miniupnpd supports some kind of security check for allowing or disallowing
 redirection to be made. The UPnP permission rules are read from the
@@ -179,17 +179,3 @@ To stop the daemon use :
   # kill `cat /var/run/miniupnpd.pid`
 or if your linux system use /etc/init.d/
   # /etc/init.d/miniupnpd stop
-
-
-* Signals :
-miniupnpd handles the following signals :
-SIGUSR1: Send public IP address change notification
-SIGUSR2: Handle special actions in Tomato Firmware version
-         Or rewrite the lease_file
-SIGINT:  Close gracefully
-SIGTERM: Close gracefully
-SIGPIPE: Ignore
-
-There is code to detect change in network interfaces bsd/ifacewatcher.c and
-linux/ifacewatcher.c, but if that code doesn't work for you, you may want to
-send SIGUSR1 to miniupnpd if you public IP address changed.
